force-app/main/default/objects/Medicamento__c/Medicamento__c.object-meta.xml
<CustomObject>
    <label>Medicamento</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Medicamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medicamentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>