force-app/main/default/objects/Medicamento__c/fields/Accion_Terapeutica__c.field-meta.xml
<CustomField>
    <fullName>Accion_Terapeutica__c</fullName>
    <label>Acción Terapéutica</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>