force-app/main/default/objects/Medicamento__c/fields/Cargo_obra_social__c.field-meta.xml
<CustomField>
    <fullName>Cargo_obra_social__c</fullName>
    <label>Cargo Obra Social</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>