force-app/main/default/objects/Medicamento__c/fields/Codigo_Externo1__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Externo1__c</fullName>
    <label>Código Externo1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>