force-app/main/default/objects/Medicamento__c/fields/Codigo_Externo2__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Externo2__c</fullName>
    <label>Código Externo2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>