force-app/main/default/objects/Medicamento__c/fields/Codigo_Externo3__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Externo3__c</fullName>
    <label>Codigo Externo3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>