force-app/main/default/objects/Medicamento__c/fields/Codigo_Laboratorio__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Laboratorio__c</fullName>
    <label>Codigo Laboratorio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>