force-app/main/default/objects/Medicamento__c/fields/Codigo_medicamento__c.field-meta.xml
<CustomField>
    <fullName>Codigo_medicamento__c</fullName>
    <externalId>true</externalId>
    <label>Código Medicamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>