force-app/main/default/objects/Medicamento__c/fields/Codigo_tamano__c.field-meta.xml
<CustomField>
    <fullName>Codigo_tamano__c</fullName>
    <label>Código Tamaño</label>
    <length>255</length>
    <type>Text</type>
</CustomField>