force-app/main/default/objects/Medicamento__c/fields/Descripcion_Accion_Terapeutica__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Accion_Terapeutica__c</fullName>
    <label>Descripcion Accion Terapeutica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>