force-app/main/default/objects/Medicamento__c/fields/Descripcion_Forma__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Forma__c</fullName>
    <label>Descripción Forma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>