force-app/main/default/objects/Medicamento__c/fields/Descripcion_Laboratorio__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Laboratorio__c</fullName>
    <label>Descripcion Laboratorio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>