force-app/main/default/objects/Medicamento__c/fields/Descripcion_Monodroga__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Monodroga__c</fullName>
    <label>Descripcion Monodroga</label>
    <length>255</length>
    <type>Text</type>
</CustomField>