force-app/main/default/objects/Medicamento__c/fields/Descripcion_Tamao__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Tamao__c</fullName>
    <label>Descripción Tamaño</label>
    <length>255</length>
    <type>Text</type>
</CustomField>