force-app/main/default/objects/Medicamento__c/fields/Descripcion_Tipo_Unidades__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Tipo_Unidades__c</fullName>
    <label>Descripción Tipo Unidades</label>
    <length>255</length>
    <type>Text</type>
</CustomField>