force-app/main/default/objects/Medicamento__c/fields/Descripcion_tipo_valor__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_tipo_valor__c</fullName>
    <formula>Tipo_valor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción tipo valor</label>
    <type>Text</type>
</CustomField>