force-app/main/default/objects/Medicamento__c/fields/Descripcion_Unidad__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Unidad__c</fullName>
    <label>Descripción Unidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>