force-app/main/default/objects/Medicamento__c/fields/Descripcion_Via__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Via__c</fullName>
    <label>Descripción Vía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>