force-app/main/default/objects/Medicamento__c/fields/Edad_Maxima__c.field-meta.xml
<CustomField>
    <fullName>Edad_Maxima__c</fullName>
    <label>Edad Máxima</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>