force-app/main/default/objects/Medicamento__c/fields/Edad_Minima__c.field-meta.xml
<CustomField>
    <fullName>Edad_Minima__c</fullName>
    <label>Edad Mínima</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>