force-app/main/default/objects/Medicamento__c/fields/Estado_Presentacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_Presentacion__c</fullName>
    <label>Estado Presentación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>