force-app/main/default/objects/Medicamento__c/fields/Estado_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Estado_Vigencia__c</fullName>
    <label>Estado Vigencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>