force-app/main/default/objects/Medicamento__c/fields/Estupefaciente__c.field-meta.xml
<CustomField>
    <fullName>Estupefaciente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estupefaciente</label>
    <type>Checkbox</type>
</CustomField>