force-app/main/default/objects/Medicamento__c/fields/Excluye_Vademecum__c.field-meta.xml
<CustomField>
    <fullName>Excluye_Vademecum__c</fullName>
    <label>Excluye Vademecum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>