force-app/main/default/objects/Medicamento__c/fields/Fecha_Baja__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Baja__c</fullName>
    <label>Fecha Baja</label>
    <type>Date</type>
</CustomField>