force-app/main/default/objects/Medicamento__c/fields/Fecha_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vigencia__c</fullName>
    <label>Fecha Vigencia</label>
    <type>Date</type>
</CustomField>