force-app/main/default/objects/Medicamento__c/fields/Forma__c.field-meta.xml
<CustomField>
    <fullName>Forma__c</fullName>
    <label>Forma</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>