force-app/main/default/objects/Medicamento__c/fields/Grupo_terapeutico2__c.field-meta.xml
<CustomField>
    <fullName>Grupo_terapeutico2__c</fullName>
    <label>Grupo Terapéutico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>