force-app/main/default/objects/Medicamento__c/fields/Grupo_Terapeutico__c.field-meta.xml
<CustomField>
    <fullName>Grupo_Terapeutico__c</fullName>
    <label>Grupo Terapeutico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>