force-app/main/default/objects/Medicamento__c/fields/Maxima_Unidades__c.field-meta.xml
<CustomField>
    <fullName>Maxima_Unidades__c</fullName>
    <label>Máxima Unidades</label>
    <length>255</length>
    <type>Text</type>
</CustomField>