force-app/main/default/objects/Medicamento__c/fields/Medat_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Medat_Nombre__c</fullName>
    <label>Medat. Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>