force-app/main/default/objects/Medicamento__c/fields/Medicamento_Bonificado__c.field-meta.xml
<CustomField>
    <fullName>Medicamento_Bonificado__c</fullName>
    <label>Medicamento Bonificado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>