force-app/main/default/objects/Medicamento__c/fields/MedLab_Codigo__c.field-meta.xml
<CustomField>
    <fullName>MedLab_Codigo__c</fullName>
    <label>MedLab Código</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>