force-app/main/default/objects/Medicamento__c/fields/Monodroga__c.field-meta.xml
<CustomField>
    <fullName>Monodroga__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monodroga</label>
    <referenceTo>Monodroga__c</referenceTo>
    <relationshipLabel>Medicamentos</relationshipLabel>
    <relationshipName>Medicamentos</relationshipName>
    <type>Lookup</type>
</CustomField>