force-app/main/default/objects/Medicamento__c/fields/Nacional__c.field-meta.xml
<CustomField>
    <fullName>Nacional__c</fullName>
    <label>Nacional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>