force-app/main/default/objects/Medicamento__c/fields/Nombre_de_Laboratorio__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Laboratorio__c</fullName>
    <label>Nombre de Laboratorio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>