force-app/main/default/objects/Medicamento__c/fields/Nombre_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Producto__c</fullName>
    <label>Nombre de Producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>