force-app/main/default/objects/Medicamento__c/fields/Nombre_de_Via__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Via__c</fullName>
    <label>Nombre de Via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>