force-app/main/default/objects/Medicamento__c/fields/Nombre_Monodroga__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Monodroga__c</fullName>
    <label>Nombre Monodroga</label>
    <length>255</length>
    <type>Text</type>
</CustomField>