force-app/main/default/objects/Medicamento__c/fields/Nombre_Tamanio__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Tamanio__c</fullName>
    <label>Nombre Tamaño</label>
    <length>255</length>
    <type>Text</type>
</CustomField>