force-app/main/default/objects/Medicamento__c/fields/Nombre_Tipo_de_Unidad__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Tipo_de_Unidad__c</fullName>
    <label>Nombre Tipo de Unidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>