force-app/main/default/objects/Medicamento__c/fields/PMI_Hijo__c.field-meta.xml
<CustomField>
    <fullName>PMI_Hijo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PMI Hijo</label>
    <type>Checkbox</type>
</CustomField>