force-app/main/default/objects/Medicamento__c/fields/PMI_Madre__c.field-meta.xml
<CustomField>
    <fullName>PMI_Madre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PMI Madre</label>
    <type>Checkbox</type>
</CustomField>