force-app/main/default/objects/Medicamento__c/fields/Porcentaje_Cobertura__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Cobertura__c</fullName>
    <label>Porcentaje Cobertura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>