force-app/main/default/objects/Medicamento__c/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <label>Precio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>