force-app/main/default/objects/Medicamento__c/fields/Precio_referencia2__c.field-meta.xml
<CustomField>
    <fullName>Precio_referencia2__c</fullName>
    <label>Precio Referencia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>