force-app/main/default/objects/Medicamento__c/fields/Psicofarmaco__c.field-meta.xml
<CustomField>
    <fullName>Psicofarmaco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Psicofármaco</label>
    <type>Checkbox</type>
</CustomField>