force-app/main/default/objects/Medicamento__c/fields/Referencia2__c.field-meta.xml
<CustomField>
    <fullName>Referencia2__c</fullName>
    <label>Referencia 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>