force-app/main/default/objects/Medicamento__c/fields/Referencia3__c.field-meta.xml
<CustomField>
    <fullName>Referencia3__c</fullName>
    <label>Referencia 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>