force-app/main/default/objects/Medicamento__c/fields/Res_310__c.field-meta.xml
<CustomField>
    <fullName>Res_310__c</fullName>
    <label>Res 310</label>
    <length>255</length>
    <type>Text</type>
</CustomField>