force-app/main/default/objects/Medicamento__c/fields/Sexo_Permitido__c.field-meta.xml
<CustomField>
    <fullName>Sexo_Permitido__c</fullName>
    <label>Sexo Permitido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>