force-app/main/default/objects/Medicamento__c/fields/Tamanio__c.field-meta.xml
<CustomField>
    <fullName>Tamanio__c</fullName>
    <label>Tamaño</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>