force-app/main/default/objects/Medicamento__c/fields/Tipo_de_Cobertura__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cobertura__c</fullName>
    <label>Tipo de Cobertura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>