force-app/main/default/objects/Medicamento__c/fields/Tipo_Unidad__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Unidad__c</fullName>
    <label>Tipo Unidades</label>
    <length>255</length>
    <type>Text</type>
</CustomField>