force-app/main/default/objects/Medicamento__c/fields/Tipo_valor__c.field-meta.xml
<CustomField>
    <fullName>Tipo_valor__c</fullName>
    <label>Tipo valor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>