force-app/main/default/objects/Medicamento__c/fields/Troquel__c.field-meta.xml
<CustomField>
    <fullName>Troquel__c</fullName>
    <label>Troquel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>