force-app/main/default/objects/Medicamento__c/fields/UDivisin__c.field-meta.xml
<CustomField>
    <fullName>UDivisin__c</fullName>
    <label>U/División</label>
    <length>255</length>
    <type>Text</type>
</CustomField>