force-app/main/default/objects/Medicamento__c/fields/UnidDivisibles__c.field-meta.xml
<CustomField>
    <fullName>UnidDivisibles__c</fullName>
    <label>Unid/Divisibles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>