force-app/main/default/objects/Medicamento__c/fields/Venta_Libre__c.field-meta.xml
<CustomField>
    <fullName>Venta_Libre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Venta Libre</label>
    <type>Checkbox</type>
</CustomField>