force-app/main/default/objects/Medicamento__c/fields/Via__c.field-meta.xml
<CustomField>
    <fullName>Via__c</fullName>
    <label>Via</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>