force-app/main/default/objects/Medicamento__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codigo_medicamento__c</columns>
    <columns>Nombre_de_Producto__c</columns>
    <columns>Nombre_de_Presentacion__c</columns>
    <columns>Edad_Minima__c</columns>
    <columns>Edad_Maxima__c</columns>
    <columns>Venta_Libre__c</columns>
    <columns>Codigo_de_Barras__c</columns>
    <columns>Tipo_de_Cobertura__c</columns>
    <columns>Cobertura__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>